syntax="proto3";
import "common.proto";

package mq;

message PutRequest
{
    string topic = 1;
    string message = 2;
}

message PutResponse
{
    Status status = 1;
}

message GetRequest
{
    string topic = 1;
}

message GetResponse
{
    Status status = 1;
    string message = 2;
}

service broker {
    rpc Put (PutRequest) returns (PutResponse);
    rpc Get (GetRequest) returns (GetResponse);
}
